Changelog
=========

0.3 (unreleased)
----------------

- Nothing changed yet.


0.2 (2010-05-21)
----------------

- Added tests
  [sureshvv]


0.1 (2010-05-16)
----------------

- Initial release
  [sureshvv]