@@ -1,9 +1,8 @@
-import transaction
-from time import time
-from random import betavariate
 from Products.CMFCore.utils import getToolByName
 
 def setupVarious(context):
+    if not context.readDataFile('mockmailhost_various.txt'):
+        return
     site=context.getSite()
     replace_mailhost(site)
 
